refactor - admin/products

--- a/src/admin-products.html
+++ b/src/admin-products.html
@@ -39,24 +39,18 @@
 
     <div class="">
       <h1><center>Administração - Produtos</center></h1>
-      <div class="content-box">
-        <table id="products-list">
-          <thead>
-            <tr>
-              <td>ID</td>
-              <td>Código</td>
-              <td>Categoria</td>
-              <td>Nome</td>
-              <td>Descrição</td>
-              <td>Peso</td>
-              <td>Preço</td>
-              <td>Editar</td>
-              <td>Deletar</td>
-            </tr>
-          </thead>
-        </table>
+
+      <center>
+        <button type="button" class="new-product-btn" onclick="openModal()">
+          <img src="../images/add.png" alt="add-product" class="add-icon">
+          Adicionar Produto
+        </button>
+      </center>
+
+      <div class="products-list" id="products-list">
       </div>
-      <div class="content-box">
+
+      <!-- <div class="content-box">
         <form onsubmit="createProduct(this)">
           <label for="cod">Código</label>
           <input type="number" name="cod" placeholder="123" />
@@ -86,42 +80,61 @@
 
           <button type="submit">Criar Produto</button>
         </form>
-      </div>
+      </div> -->
 
-      <div id="editModal" class="modal">
+      <div id="modal" class="modal">
         <div class="modal-content">
-          <span onclick="closeEditModal();">&times;</span>
-          <form onsubmit="editProduct(this)" id="editForm">
-            <label for="cod">Código</label>
-            <input type="number" name="cod" placeholder="123" />
+          <span onclick="closeModal();" style="float:right;">&times;</span>
+          <form onsubmit="saveProduct(this)" id="form">
+            <input type="text" name="id" hidden />
 
-            <label for="cat">Categoria</label>
-            <select name="cat" id="categories-edit"></select>
+            <div class="form-input">
+              <label for="cod">Código</label>
+              <input type="number" name="cod" placeholder="123" />
+            </div>
 
-            <label for="name">Nome</label>
-            <input type="text" name="name" placeholder="Nome do Produto" />
+            <div class="form-input">
+              <label for="cat">Categoria</label>
+              <select name="cat" id="categories-list"></select>
+            </div>
 
-            <label for="desc">Descrição</label>
-            <textarea name="desc" rows="4"> </textarea>
+            <div class="form-input">
+              <label for="name">Nome</label>
+              <input type="text" name="name" placeholder="Nome do Produto" />
+            </div>
 
-            <label for="weight">Peso</label>
-            <input type="text" name="weight" placeholder="23,56" />
+            <div class="form-input">
+              <label for="desc">Descrição</label>
+              <textarea name="desc" rows="4"> </textarea>
+            </div>
 
-            <label for="price">Preço</label>
-            R$<input
-              type="text"
-              name="price"
-              hint="em reais"
-              placeholder="23,56"
-            />
+            <div class="form-input">
+              <label for="weight">Peso (KG)</label>
+              <input type="text" name="weight" placeholder="23,56" />
+            </div>
 
-            <label for="imagem">Imagem</label>
-            <input type="url" name="url" placeholder="URL da imagem">
+            <div class="form-input">
+              <label for="price">Preço</label>
+              <input
+                type="text"
+                name="price"
+                hint="em reais"
+                placeholder="23,56"
+              />
+            </div>
 
-            <button type="submit">Editar Produto</button>
+            <div class="form-input">
+              <label for="imagem">Imagem</label>
+              <input type="url" name="url" placeholder="URL da imagem">
+            </div>
+
+            <div class="form-input">
+              <button type="submit">Salvar</button>
+            </div>
           </form>
         </div>
       </div>
+
     </div>
   </body>
 </html>
