--- a/src/produtos.html
+++ b/src/produtos.html
@@ -36,11 +36,13 @@
         <a href="./sobre.html">Sobre</a>
       </div>
     </div>
+
     <div ondrop="drop_handler(event)" ondragover="dragover_handler(event)">
       <button id="cartbtn" onclick="openCart()">
         <img src="../images/cart.png" alt="cart" id="cartimg"/>
       </button>
     </div>
+
     <div id="floatingcart" ondrop="drop_handler(event)" ondragover="dragover_handler(event)">
       <div id="cart-header">
         <h4>Seu carrinho de compras</h4>
@@ -55,26 +57,31 @@
         </button>
       </div>
     </div>
+
     <div class="content-box">
       <label for="cat">Categoria:</label>
       <select name="cat" id="category-selection" onchange="listProducts(this)">
         <option value="default" text="" data-default disabled selected></option>
       </select>
     </div>
-    <div class="content-box" id="products-list">
+
+    <div class="products-list" id="products-list">
       Selecione uma categoria.
     </div>
+
     <div id="myModal" class="modal">
       <span class="close">×</span>
       <img class="modal-content" id="img01">
       <div id="caption"></div>
     </div>
+
     <div id="cart-submit-modal" class="modal">
       <span class="close">×</span>
       <div id="cart-submit-body" class="modal-content">
         <object type="text/html" data="client_register.html"></object>
       </div>
     </div>
+
     <div id="text-modal" class="modal">
       <div id="text-modal-content" class="modal-content">
         <div id="text-modal-header">
@@ -83,6 +90,7 @@
         <div id="text-modal-body"></div>
       </div>
     </div>
+
     <div id="loading-modal" class="modal">
       <img src="../images/loading.gif" id="loading-image" class="modal-content">
     </div>
