review - all code

--- a/src/client-form.html
+++ b/src/client-form.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Cadastro de Cliente</title>
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="../styles/client_register.css">
-  <script src="../js/client_register.js"></script>
+  <link rel="stylesheet" href="../styles/client-form.css">
+  <script src="../js/client-form.js"></script>
   <script type="text/javascript">
     function submitForm(form) {
       localStorage.setItem('nome', form.name.value);
