--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>PlayGames - Sobre</title>
+    <title>PlayGames - Contatos</title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="stylesheet" href="../styles/grid.css" />
@@ -28,25 +28,41 @@
             <a href="./admin-products.html">Produtos</a>
           </div>
         </div>
-        <a href="./produtos.html">Produtos</a>
-        <a href="./pedidos.html">Pedidos</a>
-        <a href="./contatos.html">Contato</a>
-        <a href="./sobre.html">Sobre</a>
+        <a href="./products.html">Produtos</a>
+        <a href="./orders.html">Pedidos</a>
+        <a href="./contact.html">Contato</a>
+        <a href="./about.html">Sobre</a>
       </div>
     </div>
 
-    <div class="content-box">
+    <div class="content-box col-3">
       <div class="col-12">
-        <h1><center>SOBRE A PLAY GAMES</center></h1>
+        <h3><center>Endereço</center></h3>
       </div>
       <div class="col-12">
         <p>
-          <center>
-            No mercado desde 1997, somos o maior site de vendas de jogos
-            digitais do Brasil.
-          </center>
+          <center>Av. Sete de Setembro, 3165 - Rebouças, Curitiba - PR</center>
         </p>
       </div>
+    </div>
+
+    <div class="content-box col-3">
+      <h3>Telefone</h3>
+      <p>+55 (41) 91234-5678</p>
+    </div>
+
+    <div class="content-box col-3">
+      <h3>Email</h3>
+      <p>contato@playgames.com</p>
+    </div>
+
+    <div class="content-box">
+      <h3>Redes Sociais</h3>
+      <ul>
+        <li><a href="http://www.facebook.com">Facebook</a></li>
+        <li><a href="http://www.instagram.com">Instagram</a></li>
+        <li><a href="http://www.twitter.com">Twitter</a></li>
+      </ul>
     </div>
   </body>
 </html>
