--- a/src/orders.html
+++ b/src/orders.html
@@ -32,10 +32,10 @@
           <a href="./admin-products.html">Produtos</a>
         </div>
       </div>
-      <a href="./produtos.html">Produtos</a>
-      <a href="./pedidos.html">Pedidos</a>
-      <a href="./contatos.html">Contato</a>
-      <a href="./sobre.html">Sobre</a>
+      <a href="./products.html">Produtos</a>
+      <a href="./orders.html">Pedidos</a>
+      <a href="./contact.html">Contato</a>
+      <a href="./about.html">Sobre</a>
     </div>
   </div>
 
