--- a/src/products.html
+++ b/src/products.html
@@ -30,10 +30,10 @@
             <a href="./admin-products.html">Produtos</a>
           </div>
         </div>
-        <a href="./produtos.html">Produtos</a>
-        <a href="./pedidos.html">Pedidos</a>
-        <a href="./contatos.html">Contato</a>
-        <a href="./sobre.html">Sobre</a>
+        <a href="./products.html">Produtos</a>
+        <a href="./orders.html">Pedidos</a>
+        <a href="./contact.html">Contato</a>
+        <a href="./about.html">Sobre</a>
       </div>
     </div>
 
@@ -78,7 +78,7 @@
     <div id="cart-submit-modal" class="modal">
       <span class="close">×</span>
       <div id="cart-submit-body" class="modal-content">
-        <object type="text/html" data="client_register.html"></object>
+        <object type="text/html" data="client-form.html"></object>
       </div>
     </div>
 
