--- a/src/contact.html
+++ b/src/contact.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="stylesheet" href="../styles/grid.css" />
+    <link rel="stylesheet" href="../styles/contact.css" />
   </head>
   <body>
     <div class="navbar">
@@ -35,34 +36,46 @@
       </div>
     </div>
 
-    <div class="content-box col-3">
-      <div class="col-12">
-        <h3><center>Endereço</center></h3>
-      </div>
-      <div class="col-12">
-        <p>
-          <center>Av. Sete de Setembro, 3165 - Rebouças, Curitiba - PR</center>
-        </p>
-      </div>
-    </div>
+    <h1><center>Contatos</center></h1>
 
-    <div class="content-box col-3">
-      <h3>Telefone</h3>
-      <p>+55 (41) 91234-5678</p>
-    </div>
+    <div class="contact-list">
+      <div class="contact">
+        <div class="">
+          <h3><center>Endereço</center></h3>
+        </div>
+        <div class="">
+          <p>
+            <center>Av. Sete de Setembro, 3165 - Rebouças, Curitiba - PR</center>
+          </p>
+        </div>
+      </div>
 
-    <div class="content-box col-3">
-      <h3>Email</h3>
-      <p>contato@playgames.com</p>
+      <div class="contact">
+        <h3>Telefone</h3>
+        <p>+55 (41) 91234-5678</p>
+      </div>
+
+      <div class="contact">
+        <h3>Email</h3>
+        <p>contato@playgames.com</p>
+      </div>
     </div>
 
     <div class="content-box">
-      <h3>Redes Sociais</h3>
-      <ul>
-        <li><a href="http://www.facebook.com">Facebook</a></li>
-        <li><a href="http://www.instagram.com">Instagram</a></li>
-        <li><a href="http://www.twitter.com">Twitter</a></li>
-      </ul>
+      <div class="">
+        <h3>Redes Sociais</h3>
+      </div>
+      <div class="icons">
+        <a href="www.facebook.com.br">
+          <img src="../images/facebook.png" alt="" class="social-network-icon">
+        </a>
+        <a href="www.instagram.com.br">
+          <img src="../images/instagram.png" alt="" class="social-network-icon">
+        </a>
+        <a href="www.twitter.com.br">
+          <img src="../images/twitter.png" alt="" class="social-network-icon">
+        </a>
+      </div>
     </div>
   </body>
 </html>
