fix - files and features

--- a/src/admin-orders.html
+++ b/src/admin-orders.html
@@ -7,8 +7,8 @@
   <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
   <link rel="stylesheet" href="../styles/styles.css" />
   <link rel="stylesheet" href="../styles/grid.css" />
-  <link rel="stylesheet" href="../styles/orders.css" />
-  <script src="../js/orders.js"></script>
+  <link rel="stylesheet" href="../styles/admin.css" />
+  <script src="../js/admin-orders.js"></script>
 </head>
 
 <body onload="onLoad();">
@@ -30,6 +30,7 @@
         <div class="dropdown-content">
           <a href="./admin-categories.html">Categorias</a>
           <a href="./admin-products.html">Produtos</a>
+          <a href="./admin-orders.html">Pedidos</a>
         </div>
       </div>
       <a href="./products.html">Produtos</a>
