--- a/src/products.html
+++ b/src/products.html
@@ -28,6 +28,7 @@
           <div class="dropdown-content">
             <a href="./admin-categories.html">Categorias</a>
             <a href="./admin-products.html">Produtos</a>
+            <a href="./admin-orders.html">Pedidos</a>
           </div>
         </div>
         <a href="./products.html">Produtos</a>
