fix - admin products/categories

--- a/src/admin-categories.html
+++ b/src/admin-categories.html
@@ -62,7 +62,7 @@
 
     <div id="modal" class="modal">
       <div class="modal-content" style="width: 25%;">
-        <span onclick="closeModal();" style="float:right;margin-left: 15px;">&times;</span>
+        <span onclick="closeModal();" style="float:right;margin-left: 15px;cursor:pointer;">&times;</span>
         <form onsubmit="saveCategory(this)" id="form">
           <input type="text" name="id" hidden />
 
