--- a/src/admin-categories.html
+++ b/src/admin-categories.html
@@ -21,7 +21,10 @@
       </div>
       <div class="col-6 menu">
         <div class="dropdown">
-          <button class="dropbtn">Administração</button>
+          <button class="dropbtn">
+            Administração
+            <i class="fa fa-caret-down"></i>
+          </button>
           <div class="dropdown-content">
             <a href="./admin-categories.html">Categorias</a>
             <a href="./admin-products.html">Produtos</a>
