--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
       </div>
       <div class="col-6 menu">
         <div class="dropdown">
-          <button class="dropbtn">Administração
+          <button class="dropbtn">
+            Administração
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
