--- a/src/client-form.html
+++ b/src/client-form.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="user-box zip-code-dependent hidden">
-        <input class="input" type="number" id="nr" name="nr" required>
+        <input class="input" type="number" id="nr" name="nr" min="1" required>
         <div class="cut"></div>
         <label class="placeholder" for="nr">Número</label>
       </div>
@@ -109,7 +109,7 @@
           <option value="to">Tocantins</option>
         </select>
       </div>
-      <button type="submit" name="submit">Registrar</button>
+      <button type="submit" name="submit">Continuar</button>
     </form>
   </div>
   </div>
