--- a/src/contact.html
+++ b/src/contact.html
@@ -67,13 +67,13 @@
         <h3>Redes Sociais</h3>
       </div>
       <div class="icons">
-        <a href="www.facebook.com.br">
+        <a href="https://www.facebook.com.br">
           <img src="../images/facebook.png" alt="" class="social-network-icon">
         </a>
-        <a href="www.instagram.com.br">
+        <a href="https://www.instagram.com.br">
           <img src="../images/instagram.png" alt="" class="social-network-icon">
         </a>
-        <a href="www.twitter.com.br">
+        <a href="https://www.twitter.com.br">
           <img src="../images/twitter.png" alt="" class="social-network-icon">
         </a>
       </div>
