--- a/src/products.html
+++ b/src/products.html
@@ -78,7 +78,7 @@
 
     <div id="cart-submit-modal" class="modal">
       <span class="close">×</span>
-      <div id="cart-submit-body" class="modal-content">
+      <div id="cart-submit-body" class="modal-content" style="margin: auto;margin-top:5%">
         <object type="text/html" data="client-form.html"></object>
       </div>
     </div>
