--- a/src/admin-products.html
+++ b/src/admin-products.html
@@ -68,7 +68,7 @@
 
             <div class="form-input">
               <label for="cod">Código</label>
-              <input type="number" name="cod" placeholder="123" />
+              <input type="number" name="cod" placeholder="123" min="0" />
             </div>
 
             <div class="form-input">
@@ -92,7 +92,7 @@
             </div>
 
             <div class="form-input">
-              <label for="price">Preço</label>
+              <label for="price">Preço (R$)</label>
               <input
                 type="text"
                 name="price"
